# rust-rmce-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  run-all-tests.sh  run-tests.sh  setup-project.sh
.cargo/: audit.toml
.github/workflows/: rust.yml
api/: Cargo.toml  Dockerfile  entrypoint.sh
api/migrations/: 20260202233909_create_users_table.sql  20260213190000_create_friendships_table.sql  20260213190400_create_sensor_data_table.sql
api/src/: db.rs  lib.rs  main.rs  middleware.rs
api/src/models/: challenge.rs  friendship.rs  mod.rs  post.rs  route.rs  user.rs
api/src/routes/: auth.rs  challenges.rs  friends.rs  mod.rs  parcours.rs  posts.rs  sensor_data.rs
api/tests/: integration_tests.rs  routes.rs
docs/: API_DOCUMENTATION.md  COMPLETE.md  DEPLOYMENT.md  FILE_STRUCTURE.md  FINAL_COMPLETION_REPORT.md  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  JWT_IMPLEMENTATION.md  PROJECT_COMPLETION.md  QUICK_START.md  README.md  RUNNING_TESTS.md  TESTING_GUIDE.md
geo-service/: Cargo.toml  Dockerfile
geo-service/src/: friendship.rs  main.rs  redis_client.rs  ws.rs
migrations/: 20260202234106_create_posts_table.sql  20260212014820_add_password_to_users.sql  20260213182953_friend_col.sql  20260213190100_create_routes_table.sql  20260213190200_create_scores_table.sql  20260213190300_create_challenges_table.sql
scripts/: run-all-tests.sh  setup-and-test.sh  setup-project.sh  simulate_friend.py
shared/: Cargo.toml
shared/src/: errors.rs  jwt.rs  lib.rs  models.rs
src/: db.rs  jwt_example.rs  lib.rs  main.rs  middleware.rs
src/models/: auth.rs  post.rs  score.rs  sensor_data.rs  user.rs
src/routes/: auth.rs  challenges.rs  friends.rs  mod.rs  posts.rs  routes.rs  users.rs
tests/: routes.rs
