[package]
name = "rust-rmce-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bcrypt = "0.18.0"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9" # Note : ne pas update, version avec breaking changes
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
lazy_static = "1.5.0"

[dev-dependencies]
tower = "0.5"
