[workspace]
members = ["api", "shared", "geo-service"]
resolver = "2"

[workspace.dependencies]
axum               = { version = "0.8.8" }
tokio              = { version = "1.49.0", features = ["full"] }
serde              = { version = "1.0.228", features = ["derive"] }
serde_json         = "1.0.149"
jsonwebtoken       = "9"
lazy_static        = "1.5.0"
tracing            = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
dotenvy            = "0.15.7"
chrono             = { version = "0.4", features = ["serde"] }
sqlx               = { version = "0.8", features = ["runtime-tokio", "tls-native-tls", "postgres", "chrono", "macros"], default-features = false }
tower              = "0.5"
tower-http         = { version = "0.6", features = ["trace", "request-id"] }
bcrypt             = "0.18.0"
reqwest            = { version = "0.12", features = ["json"] }
redis              = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
futures-util       = "0.3"
