[package]
name    = "rust-rmce-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum.workspace               = true
tokio.workspace              = true
serde.workspace              = true
serde_json.workspace         = true
tracing.workspace            = true
tracing-subscriber.workspace = true
dotenvy.workspace            = true
chrono.workspace             = true
sqlx.workspace               = true
tower.workspace              = true
tower-http.workspace         = true
bcrypt.workspace             = true
shared = { path = "../shared" }

[dev-dependencies]
tower.workspace = true
