[package]
name    = "geo-service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum             = { workspace = true, features = ["ws"] }
tokio.workspace  = true
serde.workspace  = true
serde_json.workspace     = true
tracing.workspace        = true
tracing-subscriber.workspace = true
dotenvy.workspace        = true
redis.workspace          = true
reqwest.workspace        = true
futures-util.workspace   = true
shared = { path = "../shared" }
